# codec_nvidia_jpeg

./: CMakeLists.txt  Nvjpeg_codec.hpp  README.md
